# agent-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  railway.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/agent_platform/: asgi.py  settings.py  urls.py  wsgi.py
backend/agents/: admin.py  models.py  reputation.py  serializers.py  urls.py  views.py
backend/agents/management/commands/: recalculate_reputation.py  seed_agents.py
backend/agents/migrations/: 0001_initial.py
backend/agents/tests/: test_bug_fixes.py  test_models.py  test_views.py
backend/bridge/: apex_sync.py  models.py  pipeline_builder.py  turbo_sync.py
backend/bridge/management/commands/: build_pipelines.py  sync_apex.py  sync_turbo.py
backend/core/: authentication.py  middleware.py  permissions.py  posthog_client.py
backend/core/tests/: test_security.py
backend/events/: admin.py  broadcast.py  calibration.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py
backend/events/tests/: test_models.py  test_views.py  test_websocket.py
deploy/: Dockerfile  docker-compose.yml  nginx.conf
docs/: AGENT_OWNERSHIP.md  API.md  ARCHITECTURE.md  COMPETITIVE_TEARDOWN.md  SETUP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
sdk/: README.md  setup.py
(+49 files in other folders)
